--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,48 @@ body {
   color: whitesmoke;
 }
 
+.newDrink {
+  text-align: center;
+}
+
+#name, #brand, #price, #flavor {
+  width:60%;
+  height:56px;
+  padding: 0px 16px;
+  border: solid;
+  border-radius: 4px;
+  font-family: 'Gotham SSm A', 'Gotham SSm B', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+  background-color: transparent;
+  color: #282828;
+  outline: none;
+  box-shadow: 0px 4px 20px 0px transparent;
+  transition: 0.3s background-color ease-in-out, 0.3s box-shadow ease-in-out, 0.1s padding ease-in-out;
+  -webkit-appearance: none;
+  background-color: transparent;
+  opacity: 40%;
+  text-align: center;
+}
+
+#name:hover, #brand:hover, #price:hover, #flavor:hover {
+background-color: rgba(255, 255, 255, 0.45);
+  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
+}
+ .reForm.focussed input{
+  padding: 24px 16px 8px 16px;
+}
+.reForm.focussed input {
+  top: 4px;
+  opacity: 1;
+  color: #28cc70;
+}
+#reuButton {
+  margin-top: 1%;
+}
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
