--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body {
 }
 
 #name:hover, #brand:hover, #price:hover, #flavor:hover, #quantity:hover{
-background-color: rgba(255, 255, 255, 0.45);
+background-color: white;
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
 }
  .reForm.focussed input{
